RESOLVED FIXED172123
RealtimeOutgoingVideoSource should support sinkWants for rotation
https://bugs.webkit.org/show_bug.cgi?id=172123
Summary RealtimeOutgoingVideoSource should support sinkWants for rotation
youenn fablet
Reported 2017-05-15 09:36:27 PDT
This would ensure rotation is handled even when RTP CVO is not on
Attachments
Patch (5.13 KB, patch)
2017-05-16 13:30 PDT, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2017-05-15 10:14:17 PDT
youenn fablet
Comment 2 2017-05-16 13:30:09 PDT
Build Bot
Comment 3 2017-05-16 13:32:53 PDT
Attachment 310294 [details] did not pass style-queue: ERROR: Source/ThirdParty/libwebrtc/Source/webrtc/api/video/i420_buffer.h:43: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 4 2017-05-16 14:18:23 PDT
Comment on attachment 310294 [details] Patch Clearing flags on attachment: 310294 Committed r216947: <http://trac.webkit.org/changeset/216947>
WebKit Commit Bot
Comment 5 2017-05-16 14:18:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.