RealtimeOutgoingVideoSource should support sinkWants for rotation https://bugs.webkit.org/show_bug.cgi?id=172123 <rdar://problem/32200017>

Patch by Youenn Fablet <youenn@apple.com> on 2017-05-16
Reviewed by Eric Carlson.

Source/ThirdParty/libwebrtc:

* Source/webrtc/api/video/i420_buffer.h: Exporting rotate routine.

Source/WebCore:

Covered by manual testing.

* platform/mediastream/mac/RealtimeOutgoingVideoSource.cpp:
(WebCore::RealtimeOutgoingVideoSource::AddOrUpdateSink): Triggering pixel rotation based on sink.
(WebCore::RealtimeOutgoingVideoSource::sendFrame): Doing the rotation using libwebrtc API.
* platform/mediastream/mac/RealtimeOutgoingVideoSource.h:

Canonical link: https://commits.webkit.org/189116@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216947 268f45cc-cd09-0410-ab3c-d52691b4dbfc