Source/WebCore/platform/mediastream/mac/RealtimeOutgoingVideoSource.h
@@ -97,6 +97,7 @@ private:
     bool m_isStopped { false };
     Timer m_blackFrameTimer;
     rtc::scoped_refptr<webrtc::VideoFrameBuffer> m_blackFrame;
+    bool m_shouldApplyRotation { false };
 };
 
 } // namespace WebCore
